--- a/index.html
+++ b/index.html
@@ -156,12 +156,17 @@
             </a>
           </span>
         </div>
-
         <div class="footer-row">
           <span>Soporte técnico:</span>
           <span>
             <a href="mailto:soporte@jemdev.lat">soporte@jemdev.lat</a>
           </span>
+        </div>
+        <!-- 🆕 NUEVA LÍNEA -->
+        <div class="footer-row" style="margin-top: 16px;">
+          <a href="/privacidad.html">Política de Privacidad</a>
+          <span>•</span>
+          <a href="/terminos.html">Términos de Servicio</a>
         </div>
       </footer>
     </div>
